--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'com.google.devtools.ksp' version "1.7.21-1.0.8"
+    id 'com.google.devtools.ksp' version "1.8.0-1.0.9"
 }
 
 android {
@@ -48,11 +48,14 @@ android {
 }
 
 dependencies {
+    // Import the Compose BOM
+    implementation platform('androidx.compose:compose-bom:2023.01.00')
+
     implementation 'androidx.activity:activity-compose:1.6.1'
-    implementation "androidx.compose.material:material:$compose_material_version"
-    implementation "androidx.compose.ui:ui:$compose_ui_version"
-    implementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
+    implementation "androidx.compose.material:material"
+    implementation "androidx.compose.ui:ui"
+    implementation "androidx.compose.ui:ui-tooling"
+    implementation "androidx.compose.ui:ui-tooling-preview"
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
@@ -64,6 +67,6 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
 
     // Testing
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.0"
-    androidTestImplementation "androidx.test.ext:junit:1.1.4"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
+    androidTestImplementation "androidx.test.ext:junit:1.1.5"
 }
